@@ -21,8 +21,16 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation 'com.google.testing.compile:compile-testing:0.17'
+    testImplementation "org.openjfx:javafx-base:17:win"
+    testImplementation "org.openjfx:javafx-controls:17:win"
+    testImplementation "org.openjfx:javafx-graphics:17:win"
 }
 
 test {
     useJUnitPlatform()
+    doFirst {
+        jvmArgs = [
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+        ]
+    }
 }
